<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.phil.bladerunner.MainActivity">
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleHorizontal"
        android:max="100"
        android:indeterminate="true"
        android:visibility="gone" />
    <EditText
        android:id="@+id/simpleSearchView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:divider="@color/colorPrimaryDark"
        android:dividerHeight="2dp"
        android:iconifiedByDefault="false"
        android:queryHint="Search Here"/>
    <ListView
        android:id="@+id/list_recipes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/colorPrimaryDark"
        android:dividerHeight="2dp"
        android:layout_below="@id/simpleSearchView"/>
</RelativeLayout>